--- a/storefront/playground/templates/home.html
+++ b/storefront/playground/templates/home.html
@@ -26,6 +26,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
   <button type="submit" class="btn btn-success" style="margin-left:1%">Strong Acid Strong Base Titration</button>
 </form>
+<form action = "HH/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <button type="submit" class="btn btn-success" style="margin-left:1%">Henderson–Hasselbalch equation</button>
+</form>
 <div class="header" style = "font-family:Tahoma">
   <h1 style="font-family:Tahoma; margin-top: 1%;margin-left:1%">Chemical Formula Tools</h1>
 </div>
@@ -43,5 +50,75 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 <button type="submit" class="btn btn-success" style="margin-left:1%">Molar Mass Calculator</button>
 </form>
+<form action = "GtoM/">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+<button type="submit" class="btn btn-success" style="margin-left:1%">Convert Grams to Moles</button>
+</form>
+<form action = "MtoG/">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+<button type="submit" class="btn btn-success" style="margin-left:1%">Convert Moles to Grams</button>
+</form>
+<form action = "Pmass/">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+<button type="submit" class="btn btn-success" style="margin-left:1%">Percent Mass Calculator</button>
+</form>
+<div class="header" style = "font-family:Tahoma">
+  <h1 style="font-family:Tahoma; margin-top: 1%;margin-left:1%">Electrochemistry tools</h1>
+</div>
+<form action = "electrolysis/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <button type="submit" class="btn btn-success" style="margin-left:1%">Electrolysis Calculator</button>
+  </form>
+<form action = "Ecell/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <button type="submit" class="btn btn-success" style="margin-left:1%">Electric Cell Potential</button>
+  </form>
+<form action = "Gas/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <button type="submit" class="btn btn-success" style="margin-left:1%">Ideal Gas Law</button>
+  </form>
+<div class="header" style = "font-family:Tahoma">
+  <h1 style="font-family:Tahoma; margin-top: 1%;margin-left:1%">Reaction and Conencetration tools</h1>
+</div>
+<form action = "Geq/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <button type="submit" class="btn btn-success" style="margin-left:1%">Equilibrium From Gibbs Free Energy</button>
+  </form>
+  <form action = "RR/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <button type="submit" class="btn btn-success" style="margin-left:1%">Reaction Rate</button>
+  </form>
+  <form action = "IRL/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <button type="submit" class="btn btn-success" style="margin-left:1%">Integrated Rate Laws</button>
+  </form>
 </html>
+
 
