--- a/storefront/playground/templates/error_500.html
+++ b/storefront/playground/templates/error_500.html
@@ -5,8 +5,8 @@
     height: max-content;
     margin-left: 1%; ">    
 
-<h1 style = "margin-top:.5%;margin-bottom:2%;color:white;max-width: 100%;">An error has occured due to not improper inputs</h1>
-
+<h1 style = "margin-top:.5%;margin-bottom:2%;color:white;max-width: 100%;">An error has occured due to improper inputs</h1>
+        </html>
 <form>
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
