--- a/storefront/playground/templates/error_500.html
+++ b/storefront/playground/templates/error_500.html
@@ -1,12 +1,11 @@
-
+<html>
     <div class="header" style = "background-color:rgb(33, 173, 38);border-radius: 8px;margin-top: 1%;margin-bottom: 1%;
     padding: 1%; 
     width: max-content;
     height: max-content;
     margin-left: 1%; ">    
 
-<h1 style = "margin-top:.5%;margin-bottom:2%;color:white;max-width: 100%;">An error has occured due to improper inputs</h1>
-
+<h1 style = "margin-top:.5%;margin-bottom:2%;color:white;max-width: 100%;">An error has occured due to not improper inputs</h1>
     </div>
 <form>
     <meta charset="utf-8">
