--- a/storefront/playground/templates/home.html
+++ b/storefront/playground/templates/home.html
@@ -1,6 +1,11 @@
-
+<head>
+<title>
+  Chemistry Calculator
+</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
 <html>
-  <div class="header" style = "background-color:rgb(33, 173, 38);border-radius: 8px;margin-top: 1%;margin-bottom: 1%;
+  <div class="header" style = "background-color:rgb(44, 82, 57);border-radius: 8px;margin-top: 1%;margin-bottom: 1%;
     padding: 1%; 
     width: max-content;
     height: max-content;
@@ -10,6 +15,7 @@
 </div>
     <body style = "background-color: rgb(202, 202, 202);background: url(https://i.imgur.com/MJAkxbh.png);background-size:10%;">
 <div class="header" style = "font-family:Tahoma">
+
     <h1 style="font-family:Tahoma; margin-top: 1%;margin-left:1%">Titration Tools</h1>
   </div>
 </body>
@@ -19,23 +25,32 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
+<div class="row">
+  <div style = "margin-left:2%;margin-right: 1.1%;">
 <form action = "titration/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  <button type="submit" class="btn btn-success" style="margin-left:1%">Strong Acid Strong Base Titration</button>
+  <button type="submit" class="btn btn-success btn-lg" style="margin-left:1%">Strong Acid Strong Base Titration</button>
 </form>
+</div>
+<div style = "margin-right: 1.1%;">
 <form action = "HH/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  <button type="submit" class="btn btn-success" style="margin-left:1%">Henderson–Hasselbalch equation</button>
+  <button type="submit" class="btn btn-success btn-lg" style="margin-left:1%">Henderson–Hasselbalch equation</button>
 </form>
+</div>
+</div>
+</div>
+</html>
 <div class="header" style = "font-family:Tahoma">
   <h1 style="font-family:Tahoma; margin-top: 1%;margin-left:1%">Chemical Formula Tools</h1>
 </div>
+<div class="row">
 </body>
 <head>
 <meta charset="utf-8">
@@ -43,82 +58,109 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
+<div style = "margin-left:2%;margin-right:1.1%">
 <form action = "molMass/">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-<button type="submit" class="btn btn-success" style="margin-left:1%">Molar Mass Calculator</button>
+<button type="submit" class="btn btn-success btn-lg" style="margin-left:1%">Molar Mass Calculator</button>
 </form>
+</div>
+<div style = "margin-right:1.1%">
 <form action = "GtoM/">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-<button type="submit" class="btn btn-success" style="margin-left:1%">Convert Grams to Moles</button>
+<button type="submit" class="btn btn-success btn-lg" style="margin-left:1%">Convert Grams to Moles</button>
 </form>
+</div>
+<div style = "margin-right:1.1%">
 <form action = "MtoG/">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-<button type="submit" class="btn btn-success" style="margin-left:1%">Convert Moles to Grams</button>
+<button type="submit" class="btn btn-success btn-lg" style="margin-left:1%">Convert Moles to Grams</button>
 </form>
+</div>
+<div style = "margin-right:1.1%">
 <form action = "Pmass/">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-<button type="submit" class="btn btn-success" style="margin-left:1%">Percent Mass Calculator</button>
+<button type="submit" class="btn btn-success btn-lg" style="margin-left:1%">Percent Mass Calculator</button>
 </form>
+</div>
+</div>
 <div class="header" style = "font-family:Tahoma">
   <h1 style="font-family:Tahoma; margin-top: 1%;margin-left:1%">Electrochemistry tools</h1>
 </div>
+<div class="row">
+  <div style = "margin-left:1.95%;margin-right: 1.1%;">
 <form action = "electrolysis/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  <button type="submit" class="btn btn-success" style="margin-left:1%">Electrolysis Calculator</button>
+  <button type="submit" class="btn btn-success btn-lg" style="margin-left:1%">Electrolysis Calculator</button>
   </form>
+  </div>
+  <div style = "margin-right: 1.1%;">
 <form action = "Ecell/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  <button type="submit" class="btn btn-success" style="margin-left:1%">Electric Cell Potential</button>
+  <button type="submit" class="btn btn-success btn-lg" style="margin-left:1%">Electric Cell Potential</button>
   </form>
+</div>
+<div style = "margin-right: 1.1%;">
 <form action = "Gas/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  <button type="submit" class="btn btn-success" style="margin-left:1%">Ideal Gas Law</button>
+  <button type="submit" class="btn btn-success btn-lg" style="margin-left:1%">Ideal Gas Law</button>
   </form>
+  </div>
+  </div>
 <div class="header" style = "font-family:Tahoma">
   <h1 style="font-family:Tahoma; margin-top: 1%;margin-left:1%">Reaction and Conencetration tools</h1>
 </div>
+<div class="row">
+  <div style = "margin-left:1.8%;margin-right: 1.1%;">
 <form action = "Geq/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  <button type="submit" class="btn btn-success" style="margin-left:1%">Equilibrium From Gibbs Free Energy</button>
+  <button type="submit" class="btn btn-success btn-lg" style="margin-left:1%">Equilibrium From Gibbs Free Energy</button>
   </form>
+</div>
+<div style = "margin-right: 1%;">
   <form action = "RR/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  <button type="submit" class="btn btn-success" style="margin-left:1%">Reaction Rate</button>
+  <button type="submit" class="btn btn-success btn-lg" style="margin-left:1%">Reaction Rate</button>
   </form>
+</div>
+<div style = "margin-right: 1%">
   <form action = "IRL/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-  <button type="submit" class="btn btn-success" style="margin-left:1%">Integrated Rate Laws</button>
+  <button type="submit" class="btn btn-success btn-lg" style="margin-left:1%">Integrated Rate Laws</button>
   </form>
+</div>
+</div>
 </html>
+
+
 
 
